--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Process explorer with Electron",
   "main": "index.js",
   "scripts": {
-    "install": "electron-rebuild",
+    "install": "electron-rebuild -v 1.8.4",
     "start": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,10 +20,10 @@
   "homepage": "https://github.com/lusfikars/ls-process-dump#readme",
   "dependencies": {
     "nbind": "^0.3.15",
-    "os-utils": "0.0.14"
+    "os-utils": "0.0.14",
+    "electron-rebuild": "^1.7.3"
   },
   "devDependencies": {
-    "electron": "^1.8.4",
-    "electron-rebuild": "^1.7.3"
+    "electron": "^1.8.4"
   }
 }
